--- a/Code/index.html
+++ b/Code/index.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div class="hero-image">
+        <img src="/assets/one piece hero img.jpeg">
+    </div>
     <div id="game-board">
-        <canvas>
+        <h1>Matching Game</h1>
+        <canvas id="game-canvas">
 
         </canvas>
     </div>
