--- a/Code/index.html
+++ b/Code/index.html
@@ -11,12 +11,11 @@
     <div class="hero-image">
         <img src="/assets/one piece hero img.jpeg">
     </div>
-    <div id="game-board">
-        <h1>Matching Game</h1>
-        <canvas id="game-canvas">
-
-        </canvas>
-    </div>
+    <h1>Matching Game</h1>
+    <section id="game-board">
+        <img src="/assets/background image.jpeg">
+        <canvas id="game-canvas"></canvas>
+    </section>
     <script src="./game.js"></script>
 </body>
 </html>
