--- a/Code/index.html
+++ b/Code/index.html
@@ -8,13 +8,19 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="hero-image">
-        <img src="/assets/one piece hero img.jpeg">
+    <div class="hero">
+        <img class='hero-image'src="/assets/one piece hero img.jpeg">
     </div>
-    <h1>Matching Game</h1>
+    <!--This is where the memory game is hosted-->
     <section id="game-board">
+        <h1>Matching Game</h1>
         <img src="/assets/background image.jpeg">
-        <canvas id="game-canvas"></canvas>
+        <div class="memory-card">
+            <img class="front-face" src="/assets/Characters/Luffy.jpeg" alt="Luffy">
+            <img class="back-face"src="" alt="StrawHatFlag">
+        </div>
+       
+        </div>
     </section>
     <script src="./game.js"></script>
 </body>
