created divs that will act as conatiners for all 20 cards. Added the front and back image for every card. two of each character.

--- a/Code/index.html
+++ b/Code/index.html
@@ -11,15 +11,87 @@
     <div class="hero">
         <img class='hero-image'src="/assets/one piece hero img.jpeg">
     </div>
+    <h1>Matching Game</h1>
     <!--This is where the memory game is hosted-->
     <section id="game-board">
-        <h1>Matching Game</h1>
-        <img src="/assets/background image.jpeg">
         <div class="memory-card">
             <img class="front-face" src="/assets/Characters/Luffy.jpeg" alt="Luffy">
-            <img class="back-face"src="" alt="StrawHatFlag">
+            <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
-       
+        <div>
+            <img src="/assets/Characters/Luffy.jpeg" alt="Luffy">
+            <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
+        </div>
+            <img class="front-face" src="/assets/Characters/Zoro.jpeg" alt="Zoro">
+            <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
+        </div>
+        <div>
+            <img class="front-face" src="/assets/Characters/Zoro.jpeg" alt="Zoro">
+            <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
+        </div>
+            <img class="front-face" src="/assets/Characters/Nami.jpeg" alt="Nami">
+            <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
+        </div>
+        <div>
+            <img class="front-face" src="/assets/Characters/Nami.jpeg" alt="Nami">
+            <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
+        </div>
+        <div>
+            <img class="front-face" src="/assets/Characters/Usopp.jpeg" alt="Usopp">
+            <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
+        </div>
+        <div>
+            <img class="front-face" src="/assets/Characters/Usopp.jpeg" alt="Usopp">
+            <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
+        </div>
+        <div>
+            <img class="front-face" src="/assets/Characters/Sanji.jpeg" alt="Sanji">
+            <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
+        </div>
+        <div>
+            <img class="front-face" src="/assets/Characters/Sanji.jpeg" alt="Sanji">
+            <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
+        </div>
+        <div>
+            <img class="front-face" src="/assets/Characters/Chopper.jpeg" alt="Chopper">
+            <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
+        </div>
+        <div>
+            <img class="front-face" src="/assets/Characters/Chopper.jpeg" alt="Chopper">
+            <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
+        </div>
+        <div>
+            <img class="front-face" src="/assets/Characters/Robin.png" alt="Robin">
+            <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
+        </div>
+        <div>
+            <img class="front-face" src="/assets/Characters/Robin.png" alt="Robin">
+            <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
+        </div>
+        <div>
+            <img class="front-face" src="/assets/Characters/Franky.jpeg" alt="Franky">
+            <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
+        </div>
+        <div>
+            <img class="front-face" src="/assets/Characters/Franky.jpeg" alt="Franky">
+            <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
+        </div>
+        <div>
+            <img class="front-face" src="/assets/Characters/Brook.jpeg" alt="Brook">
+            <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
+        </div>
+        <div>
+            <img class="front-face" src="/assets/Characters/Brook.jpeg" alt="Brook">
+            <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
+        </div>
+        <div>
+            <img class="front-face" src="/assets/Characters/Jinbe.jpeg" alt="Jinbe">
+            <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
+        </div>
+        <div>
+            <img class="front-face" src="/assets/Characters/Jinbe.jpeg" alt="Jinbe">
+            <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
+        </div>
         </div>
     </section>
     <script src="./game.js"></script>
