added the class memory-card to each div in the game-board section

--- a/Code/index.html
+++ b/Code/index.html
@@ -18,77 +18,78 @@
             <img class="front-face" src="/assets/Characters/Luffy.jpeg" alt="Luffy">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
-        <div>
+        <div class="memory-card">
             <img src="/assets/Characters/Luffy.jpeg" alt="Luffy">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
+        <div class="memory-card">
             <img class="front-face" src="/assets/Characters/Zoro.jpeg" alt="Zoro">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
-        <div>
+        <div class="memory-card">
             <img class="front-face" src="/assets/Characters/Zoro.jpeg" alt="Zoro">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
-        </div>
+        </div class="memory-card">
             <img class="front-face" src="/assets/Characters/Nami.jpeg" alt="Nami">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
-        <div>
+        <div class="memory-card">
             <img class="front-face" src="/assets/Characters/Nami.jpeg" alt="Nami">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
-        <div>
+        <div class="memory-card">
             <img class="front-face" src="/assets/Characters/Usopp.jpeg" alt="Usopp">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
-        <div>
+        <div class="memory-card">
             <img class="front-face" src="/assets/Characters/Usopp.jpeg" alt="Usopp">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
-        <div>
+        <div class="memory-card">
             <img class="front-face" src="/assets/Characters/Sanji.jpeg" alt="Sanji">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
-        <div>
+        <div class="memory-card">
             <img class="front-face" src="/assets/Characters/Sanji.jpeg" alt="Sanji">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
-        <div>
+        <div class="memory-card">
             <img class="front-face" src="/assets/Characters/Chopper.jpeg" alt="Chopper">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
-        <div>
+        <div class="memory-card">
             <img class="front-face" src="/assets/Characters/Chopper.jpeg" alt="Chopper">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
-        <div>
+        <div class="memory-card">
             <img class="front-face" src="/assets/Characters/Robin.png" alt="Robin">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
-        <div>
+        <div class="memory-card">
             <img class="front-face" src="/assets/Characters/Robin.png" alt="Robin">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
-        <div>
+        <div class="memory-card">
             <img class="front-face" src="/assets/Characters/Franky.jpeg" alt="Franky">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
-        <div>
+        <div class="memory-card">
             <img class="front-face" src="/assets/Characters/Franky.jpeg" alt="Franky">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
-        <div>
+        <div class="memory-card">
             <img class="front-face" src="/assets/Characters/Brook.jpeg" alt="Brook">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
-        <div>
+        <div class="memory-card">
             <img class="front-face" src="/assets/Characters/Brook.jpeg" alt="Brook">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
-        <div>
+        <div class="memory-card">
             <img class="front-face" src="/assets/Characters/Jinbe.jpeg" alt="Jinbe">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
-        <div>
+        <div class="memory-card">
             <img class="front-face" src="/assets/Characters/Jinbe.jpeg" alt="Jinbe">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
