fixed syntax error in html card divs

--- a/Code/index.html
+++ b/Code/index.html
@@ -19,7 +19,7 @@
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
         <div class="memory-card">
-            <img src="/assets/Characters/Luffy.jpeg" alt="Luffy">
+            <img class="front-face" src="/assets/Characters/Luffy.jpeg" alt="Luffy">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
         <div class="memory-card">
@@ -29,7 +29,8 @@
         <div class="memory-card">
             <img class="front-face" src="/assets/Characters/Zoro.jpeg" alt="Zoro">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
-        </div class="memory-card">
+        </div>
+        <div class="memory-card">
             <img class="front-face" src="/assets/Characters/Nami.jpeg" alt="Nami">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
@@ -92,7 +93,6 @@
         <div class="memory-card">
             <img class="front-face" src="/assets/Characters/Jinbe.jpeg" alt="Jinbe">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
-        </div>
         </div>
     </section>
     <script src="./game.js"></script>
