added style to memory cards and game board. Also added a click animation for when a card is clicked.

--- a/Code/index.html
+++ b/Code/index.html
@@ -8,12 +8,15 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="hero">
-        <img class='hero-image'src="/assets/one piece hero img.jpeg">
+    <!--
+    <div class="logo-image">
+        <img src="/assets/one piece hero img.jpeg">
     </div>
     <h1>Matching Game</h1>
+    -->
     <!--This is where the memory game is hosted-->
-    <section id="game-board">
+    <section class="game-board">
+        <!--LUFFY-->
         <div class="memory-card">
             <img class="front-face" src="/assets/Characters/Luffy.jpeg" alt="Luffy">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
@@ -22,6 +25,7 @@
             <img class="front-face" src="/assets/Characters/Luffy.jpeg" alt="Luffy">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
+        <!--ZORO-->
         <div class="memory-card">
             <img class="front-face" src="/assets/Characters/Zoro.jpeg" alt="Zoro">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
@@ -30,6 +34,7 @@
             <img class="front-face" src="/assets/Characters/Zoro.jpeg" alt="Zoro">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
+        <!--NAMI-->
         <div class="memory-card">
             <img class="front-face" src="/assets/Characters/Nami.jpeg" alt="Nami">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
@@ -38,6 +43,7 @@
             <img class="front-face" src="/assets/Characters/Nami.jpeg" alt="Nami">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
+        <!--USOPP-->
         <div class="memory-card">
             <img class="front-face" src="/assets/Characters/Usopp.jpeg" alt="Usopp">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
@@ -46,6 +52,7 @@
             <img class="front-face" src="/assets/Characters/Usopp.jpeg" alt="Usopp">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
+        <!--SANJI-->
         <div class="memory-card">
             <img class="front-face" src="/assets/Characters/Sanji.jpeg" alt="Sanji">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
@@ -54,6 +61,7 @@
             <img class="front-face" src="/assets/Characters/Sanji.jpeg" alt="Sanji">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
+        <!--CHOPPER-->
         <div class="memory-card">
             <img class="front-face" src="/assets/Characters/Chopper.jpeg" alt="Chopper">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
@@ -62,6 +70,7 @@
             <img class="front-face" src="/assets/Characters/Chopper.jpeg" alt="Chopper">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
+        <!--ROBIN-->
         <div class="memory-card">
             <img class="front-face" src="/assets/Characters/Robin.png" alt="Robin">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
@@ -70,6 +79,7 @@
             <img class="front-face" src="/assets/Characters/Robin.png" alt="Robin">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
+        <!--FRANKY-->
         <div class="memory-card">
             <img class="front-face" src="/assets/Characters/Franky.jpeg" alt="Franky">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
@@ -78,6 +88,7 @@
             <img class="front-face" src="/assets/Characters/Franky.jpeg" alt="Franky">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
+        <!--BROOK-->
         <div class="memory-card">
             <img class="front-face" src="/assets/Characters/Brook.jpeg" alt="Brook">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
@@ -86,6 +97,7 @@
             <img class="front-face" src="/assets/Characters/Brook.jpeg" alt="Brook">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
+        <!--JINBE-->
         <div class="memory-card">
             <img class="front-face" src="/assets/Characters/Jinbe.jpeg" alt="Jinbe">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
