added data attribute to memory card elements and names for matching functionality

--- a/Code/index.html
+++ b/Code/index.html
@@ -17,92 +17,92 @@
     <!--This is where the memory game is hosted-->
     <section class="game-board">
         <!--LUFFY-->
-        <div class="memory-card">
+        <div class="memory-card" data-name="Luffy">
             <img class="front-face" src="/assets/Characters/Luffy.jpeg" alt="Luffy">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-name="Luffy">
             <img class="front-face" src="/assets/Characters/Luffy.jpeg" alt="Luffy">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
         <!--ZORO-->
-        <div class="memory-card">
+        <div class="memory-card" data-name="Zoro">
             <img class="front-face" src="/assets/Characters/Zoro.jpeg" alt="Zoro">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-name="Zoro">
             <img class="front-face" src="/assets/Characters/Zoro.jpeg" alt="Zoro">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
         <!--NAMI-->
-        <div class="memory-card">
+        <div class="memory-card" data-name="Nami">
             <img class="front-face" src="/assets/Characters/Nami.jpeg" alt="Nami">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-name="Nami">
             <img class="front-face" src="/assets/Characters/Nami.jpeg" alt="Nami">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
         <!--USOPP-->
-        <div class="memory-card">
+        <div class="memory-card" data-name="Usopp">
             <img class="front-face" src="/assets/Characters/Usopp.jpeg" alt="Usopp">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-name="Usopp">
             <img class="front-face" src="/assets/Characters/Usopp.jpeg" alt="Usopp">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
         <!--SANJI-->
-        <div class="memory-card">
+        <div class="memory-card" data-name="Sanji">
             <img class="front-face" src="/assets/Characters/Sanji.jpeg" alt="Sanji">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-name="Sanji">
             <img class="front-face" src="/assets/Characters/Sanji.jpeg" alt="Sanji">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
         <!--CHOPPER-->
-        <div class="memory-card">
+        <div class="memory-card" data-name="Chopper">
             <img class="front-face" src="/assets/Characters/Chopper.jpeg" alt="Chopper">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-name="Chopper">
             <img class="front-face" src="/assets/Characters/Chopper.jpeg" alt="Chopper">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
         <!--ROBIN-->
-        <div class="memory-card">
+        <div class="memory-card" data-name="Robin">
             <img class="front-face" src="/assets/Characters/Robin.png" alt="Robin">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-name="Robin">
             <img class="front-face" src="/assets/Characters/Robin.png" alt="Robin">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
         <!--FRANKY-->
-        <div class="memory-card">
+        <div class="memory-card" data-name="Franky">
             <img class="front-face" src="/assets/Characters/Franky.jpeg" alt="Franky">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
-        <div class="memory-card">
+        <div class="memory-card"data-name="Franky">
             <img class="front-face" src="/assets/Characters/Franky.jpeg" alt="Franky">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
         <!--BROOK-->
-        <div class="memory-card">
+        <div class="memory-card" data-name="Brook">
             <img class="front-face" src="/assets/Characters/Brook.jpeg" alt="Brook">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-name="Brook">
             <img class="front-face" src="/assets/Characters/Brook.jpeg" alt="Brook">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
         <!--JINBE-->
-        <div class="memory-card">
+        <div class="memory-card" data-name="Jinbe">
             <img class="front-face" src="/assets/Characters/Jinbe.jpeg" alt="Jinbe">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-name="Jinbe">
             <img class="front-face" src="/assets/Characters/Jinbe.jpeg" alt="Jinbe">
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
