--- a/Code/index.html
+++ b/Code/index.html
@@ -8,12 +8,10 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <!--
     <div class="logo-image">
-        <img src="/assets/one piece hero img.jpeg">
+        <a href="https://www.freepnglogos.com/pics/one-piece-logo" title="Image from freepnglogos.com"><img src="https://www.freepnglogos.com/uploads/one-piece-logo-5.png" width="200" alt="one piece transparent picture logo" /></a>
+        <h1>Matching Game</h1>
     </div>
-    <h1>Matching Game</h1>
-    -->
     <!--This is where the memory game is hosted-->
     <section class="game-board">
         <!--LUFFY-->
