--- a/Code/index.html
+++ b/Code/index.html
@@ -12,6 +12,10 @@
         <a href="https://www.freepnglogos.com/pics/one-piece-logo" title="Image from freepnglogos.com"><img src="https://www.freepnglogos.com/uploads/one-piece-logo-5.png" width="200" alt="one piece transparent picture logo" /></a>
         <h1>Matching Game</h1>
     </header>
+    <aside>
+        <div id="player1-score">Player 1: 0</div>
+        <div id="cpu-score">CPU: 0</div>
+    </aside>
     <!--This is where the memory game is hosted-->
     <section class="game-board">
         <!--LUFFY-->
@@ -105,6 +109,10 @@
             <img class="back-face" src="/assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
     </section>
+
+    <footer>
+        <div id="game-status">Game In Progress</div>
+    </footer>
     <script src="./game.js"></script>
 </body>
 </html>
