modified folders for pages deployment

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>One Piece Matching Game</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="logo-image">
@@ -113,6 +113,6 @@
     <footer>
         <div id="game-status">Game In Progress</div>
     </footer>
-    <script src="./game.js"></script>
+    <script src="game.js"></script>
 </body>
 </html>
