Created variables in JS for point system

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <div id="player1-score">Player 1: 0</div>
         <div id="cpu-score">CPU: 0</div>
     </aside>
+    <div>
+        <div id="game-status">Game In Progress</div>
+    </div>
     <!--This is where the memory game is hosted-->
     <section class="game-board">
         <!--LUFFY-->
@@ -109,10 +112,6 @@
             <img class="back-face" src="assets/Front of Card Image.png" alt="StrawHatFlag">
         </div>
     </section>
-
-    <footer>
-        <div id="game-status">Game In Progress</div>
-    </footer>
     <script src="game.js"></script>
 </body>
 </html>
