added start game overlay button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <a href="https://www.freepnglogos.com/pics/one-piece-logo" title="Image from freepnglogos.com"><img src="https://www.freepnglogos.com/uploads/one-piece-logo-5.png" width="200" alt="one piece transparent picture logo" /></a>
         <h1>Matching Game</h1>
     </header>
+    <div class="overlay-text visible">
+        <button>Start Game</button>
+    </div>
     <aside>
         <div id="player1-score">Player 1: 0</div>
         <div id="cpu-score">CPU: 0</div>
